--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -30,6 +30,8 @@ target_link_libraries(
     benchmark
 )
 
+target_link_libraries_system(hyriseMicroBenchmarks nlohmann_json::nlohmann_json)
+
 add_executable(
     hyriseBenchmarkPlayground
 
@@ -62,6 +64,8 @@ target_link_libraries(
     hyriseBenchmarkLib
 )
 
+target_link_libraries_system(hyriseBenchmarkFileBased nlohmann_json::nlohmann_json)
+
 # Configure hyriseBenchmarkTPCH
 add_executable(hyriseBenchmarkTPCH tpch_benchmark.cpp)
 target_link_libraries(
@@ -93,3 +97,5 @@ target_link_libraries(
     hyrise
     hyriseBenchmarkLib
 )
+
+target_link_libraries_system(hyriseBenchmarkJoinOrder nlohmann_json::nlohmann_json)
