--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -198,6 +198,7 @@ set(
     utils/plugin_test_utils.hpp
     utils/column_ids_after_pruning_test.cpp
     utils/singleton_test.cpp
+    utils/size_estimation_utils_test.cpp
     utils/string_utils_test.cpp
 )
 
