--- a/.gitmodules
+++ b/.gitmodules
@@ -24,7 +24,7 @@
 	url = https://github.com/abseil/googletest.git
 [submodule "third_party/jemalloc"]
 	path = third_party/jemalloc
-	url = https://github.com/hyrise/jemalloc.git
+	url = https://github.com/jemalloc/jemalloc.git
 [submodule "third_party/join-order-benchmark"]
 	path = third_party/join-order-benchmark
 	url = https://github.com/gregrahn/join-order-benchmark.git
